--- a/main.css
+++ b/main.css
@@ -20,6 +20,9 @@ h2 {
   font-family: 'Teko', sans-serif;
 }
 
+button {
+  display: none;
+}
 
 div {
   border: 10px solid #582fb7;
@@ -46,10 +49,7 @@ div {
 #box3 {
   background-color: #7ffc41;
 }
-@media (min-width:600px) {
 
-
-}
 
 @media (min-width:800px) {
   .container {
